--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,13 @@ h.home
 	color:#1a1a1a;
 }
 
+#body-sub-header
+{
+  font-size: 20px;
+  font-weight: bold; 
+  color:#1a1a1a;  
+}
+
 #body-text
 {
 	font-size: 16px; 
@@ -39,6 +46,12 @@ h.home
 {
   float: right; 
   width: 70%; 
+  text-align: center;
+}
+#chart-container2
+{
+  float: right; 
+  width: 50%; 
   text-align: center;
 }
 
