--- a/css/style.css
+++ b/css/style.css
@@ -24,14 +24,14 @@ h.home
 
 #body-sub-header
 {
-  font-size: 20px;
+  font-size: 17px;
   font-weight: bold; 
   color:#1a1a1a;  
 }
 
 #body-text
 {
-	font-size: 16px; 
+	font-size: 15px; 
 	color:#1a1a1a;
 }
 
@@ -63,7 +63,8 @@ h.home
 
 .bar 
 {
-  fill: #6F257F;
+  fill: darkblue;
+  /* fill: #6F257F; */
 }
 .axis path,.axis line 
 {
